# aoc2024

./: .gitignore
d1/: Cargo.toml
d1/src/: main.rs
d2/: Cargo.toml
d2/src/: main.rs
d3/: Cargo.toml
d3/src/: main.rs
d4/src/: main.rs
d5/src/: main.rs
d6/: Cargo.toml
d6/src/: main.rs
d8/: Cargo.toml
d8/src/: main.rs
