[package]
name = "d2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]

lto = "fat"
codegen-units = 1

